--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -35,6 +35,9 @@ workflows:
         script: flutter precache --ios
       - name: Build iOS
         script: |
+          cd ios
+          pod install
+          cd ..
           flutter build ios --release --no-codesign
     artifacts:
       - build/ios/iphoneos/*.app
